2018-12-11  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (main): formatting.

2018-12-04  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (main) [WIN32]: #define puts kpathsea_win32_puts
	once, instead of many #ifdefs throughout function.

2018-11-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* elt-dirs.c, knj.c, progname.c: Support non-ascii values
	for variables in the case of
	command_line_encoding = utf-8 (w32 only).

2018-11-12  Andreas Scherer  <https://ascherer.github.io>

	* tex-make.c (maketex): check return value from dup(2).

2018-07-02  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (lookup): warn that --all is ignored with bitmap fonts.
	(USAGE): likewise.
	* doc/kpathsea.texi (Path searching options) <--all>: likewise.
	Report from Werner Lember, 07 Apr 2018 12:39:34.

2018-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* progname.c, types.h, knj.h: Add a variable W32_codepage.
	* kpsewhich.c: Allow Unicode file name for pdftex in kpsewhich.
	(Windows only)

2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* kpsewhich.c: Revert. Since "command_line_encoding=utf8" is
	not so natural for pdfTeX.

2018-05-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* kpsewhich.c: Allow Unicode file name for pdftex in kpsewhich.
	(Windows only)

2018-04-14  Karl Berry  <karl@tug.org>

	* TeX Live 2018 release, kpathsea 6.3.0.

2018-03-16  Karl Berry  <karl@freefriends.org>

	* tex-glyph.h (kpse_glyph_source_fallback_res): new enum value
	in kpse_glyph_source_type.
	* tex-glyph.c (kpathsea_find_glyph): use it for `source'.
	Private report from Doug McKenna, 14 Mar 2018 19:26:12.

2018-03-14  Karl Berry  <karl@tug.org>

	* tex-glyph.c (kpathsea_find_glyph, try_size): disentangle
	successful searches and filling in return information.
	Private report from Doug McKenna, 14 Mar 2018 11:51:29.

2018-02-26  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (TEXMFVAR, TEXMFCONFIG, doc): 2018.

2018-02-24  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
